--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,8 @@
 bin_PROGRAMS=botsong
-botsong_SOURCES=main.cpp SocketClient.cpp
+botsong_SOURCES=main.cpp SocketClient.cpp X509Cert.cpp HttpRequest.cpp HttpResponse.cpp Cookie.cpp \
+				UrlManager.cpp Scan.cpp
 
 INCLUDES = -I./include
-botsong_LDFLAGS=-L./lib -lutils -lssl -lcrypto
+botsong_LDFLAGS=-L./lib -lutils -lssl -lcrypto -lhtml
 
 AUTOMAKE_OPTIONS=foreign
