--- a/Makefile.am
+++ b/Makefile.am
@@ -1,8 +1,10 @@
 bin_PROGRAMS=botsong
 botsong_SOURCES=main.cpp SocketClient.cpp X509Cert.cpp HttpRequest.cpp HttpResponse.cpp Cookie.cpp \
-	    		UrlManager.cpp Scan.cpp Stat.cpp Counter.cpp cout.cpp
+	    		UrlManager.cpp Scan.cpp Stat.cpp Counter.cpp cout.cpp NovBase.cpp Locker.cpp \
+				TsMap.cpp TsList.cpp UrlDelegate.cpp NovBqgList.cpp NovBqgContent.cpp HtmlCommon.cpp \
+				HtmlImage.cpp Url.cpp NovBqgBk.cpp
 
 INCLUDES = -I./include
-botsong_LDFLAGS=-L./lib -lutils -lssl -lcrypto
+botsong_LDFLAGS=-L./lib -lutils -lssl -lcrypto -liconv
 
 AUTOMAKE_OPTIONS=foreign
